change: make malicious zip file checks a synchronous PublishCheck if scanning is enabled and ensure that the flag potentially_malicious is correctly persisted otherwise